# py-video-game-project

./: .gitignore  DOCUMENTACION.md  README.md  jugar.bat  jugar.ps1  main.py  pyproject.toml
scripts/: generar_sonidos.py
src/juego_memoria/: __main__.py  configuracion.py  modelos.py  partida.py  puntuaciones.py  recursos.py  sonidos.py  tablero.py
src/juego_memoria/interfaz/: __init__.py  aplicacion.py  dibujo.py  disposicion.py  estados.py  pantalla_juego.py  pantalla_menu.py  pantalla_puntuaciones.py  pantalla_victoria.py
src/memory_game/: __init__.py  __main__.py  assets.py  board.py  config.py  game.py  models.py  scores.py  ui.py
src/memory_game/assets/images/: README.md
tests/: test_board.py  test_game.py  test_partida.py  test_puntuaciones.py  test_scores.py  test_tablero.py
